@startuml

title __DAO's Class Diagram__\n

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAO {
        {abstract} + add()
        {abstract} + delete()
        {abstract} + getAll()
        {abstract} + getById()
        {abstract} + update()
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAOComarca {
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAOPersona {
        {abstract} + findPersonaByUserNameAndPassword()
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAORelacioComarcaRuta {
        {abstract} + getComarquesByRuta()
        {abstract} + getRutesByComarca()
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAORuta {
    }
  }
  

  namespace ub.edu.resources.dao {
    class ub.edu.resources.dao.Parell {
        + Parell()
        + getElement1()
        + getElement2()
        + setElement1()
        + setElement2()
    }
  }
  
ub.edu.resources.dao.DAO <|-- ub.edu.resources.dao.DAORuta
ub.edu.resources.dao.DAO <|-- ub.edu.resources.dao.DAOComarca
ub.edu.resources.dao.DAO <|-- ub.edu.resources.dao.DAORelacioComarcaRuta
ub.edu.resources.dao.DAO <|-- ub.edu.resources.dao.DAOPersona
ub.edu.resources.dao.DAORelacioComarcaRuta --> ub.edu.resources.dao.Parell: usa

right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
